--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h3>Мене можна тут осьо знайти</h3>
       <ul>
         <li><a href="https://www.instagram.com/marusiadiva/" target="_blank">instagram</a></li>
-<li><a href="https://www.behance.net/e9f6b6fahttps://www.behance.net/e9f6b6fa" target="_blank">behance</a></li>
+<li><a href="https://www.behance.net/e9f6b6fa" target="_blank">behance</a></li>
   <li><a href="https://www.facebook.com/masha.bereziuk" target="_blank">facebook</a></li>
       </ul>
      <h4><i><b>Дивіться на мого пса(можете тицнуть ше)</b></i></h4>
