--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <br>
   <head>
+    <meta name="description" content="хелоу мене ЗВАТИ МАРУСЯ і осьо моя сторінка.">
     <meta charset="utf-8" />
     <title>HELLO MY NAME IS MARUSIA</title>
     <style>
@@ -31,5 +32,6 @@
      <a href="https://uk.wikipedia.org/wiki/%D0%91%D0%BE%D1%80%D0%B4%D0%B5%D1%80-%D0%BA%D0%BE%D0%BB%D1%96" target="_blank">
       <img src="12.jpg " width="50%"/></a>
       <h1><span class="colortext"> ДЯКУЮЮ ЗА УВАГУ!!!</span></h1>
+      <p>ну будьласка</p>
   </body>
 </html>
