--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
      <a href="https://uk.wikipedia.org/wiki/%D0%91%D0%BE%D1%80%D0%B4%D0%B5%D1%80-%D0%BA%D0%BE%D0%BB%D1%96" target="_blank">
       <img src="12.jpg " width="50%"/></a>
       <h1><span class="colortext"> ДЯКУЮЮ ЗА УВАГУ!!!</span></h1>
-      <p>ну будьласка</p>
+      <p>ну будьласка я поки з тим розібраласі чут не гепнулась</p>
   </body>
 </html>
