--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<br>
   <head>
+    <meta name="description" content="Шановна громадо, запрошую до перегляду.">
     <meta name="description" content="хелоу мене ЗВАТИ МАРУСЯ і осьо моя сторінка.">
     <meta charset="utf-8" />
     <title>HELLO MY NAME IS MARUSIA</title>
