--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="cowb.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="cowboy.png">
     <meta name="description" content="хелоу мене ЗВАТИ МАРУСЯ і осьо моя сторінка.">
     <meta charset="utf-8" />
     <title>HELLO MY NAME IS MARUSIA</title>
