--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="cowboy.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="shortcut icon" href="/favicon.ico" type="image/png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <meta name="description" content="хелоу мене ЗВАТИ МАРУСЯ і осьо моя сторінка.">
