--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
   <head>
    
-    <link rel="android-chrome" sizes="192x192" href="android-chrome-192x192.png">
-    <link rel="shortcut icon" href="/android-chrome-192x192.png" type="image/png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image" sizes=""
-    <meta name="description" content="хелоу мене ЗВАТИ МАРУСЯ і осьо моя сторінка.">
+    <meta name="description" content="хелоу мене ЗВАТИ МАРУСЯ і осьо моя сторінка."/>
     <meta charset="utf-8" />
     <title>HELLO MY NAME IS MARUSIA</title>
     <style>
