--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
   <head>
    
     <meta name="description" content="хелоу мене ЗВАТИ МАРУСЯ і осьо моя сторінка."/>
+    <meta
+property="og:image"
+    content="https://avatars.githubusercontent.com/u/114561313?v=4"/>
     <meta charset="utf-8" />
     <title>HELLO MY NAME IS MARUSIA</title>
     <style>
